--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "slim/slim": "^3.10",
         "aldarien/config": "^1.0",
-        "danielstjules/stringy": "^3.1"
+        "danielstjules/stringy": "^3.1",
+        "nesbot/carbon": "^1.33"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.3"
@@ -19,7 +20,8 @@
     ],
     "autoload": {
       "psr-4": {
-        "App\\": "app"
+        "App\\": "app",
+        "Backup\\": "src"
       }
     }
 }
