--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,10 @@
     "type": "project",
     "require": {
         "slim/slim": "^3.10",
-        "aldarien/config": "^1.0",
+        "aldarien/root": "^1.0",
         "danielstjules/stringy": "^3.1",
-        "nesbot/carbon": "^1.33"
+        "nesbot/carbon": "^1.33",
+        "symfony/yaml": "^4.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.3"
