--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,10 @@
     "type": "project",
     "require": {
         "slim/slim": "^3",
-        "aldarien/root": "^1",
+        "aldarien/root": "*",
         "danielstjules/stringy": "^3",
         "nesbot/carbon": "^1",
-        "symfony/yaml": "^4"
+        "symfony/yaml": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^7"
